--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_DB_URL="mongodb://localhost:27017/neurolabDB"
+MONGO_DB_URL="mongodb://localhost:27017"
 AWS_ACCESS_KEY_ID="bdjdjhdkdmndcc"
 AWS_SECRET_ACCESS_KEY="dnndndjndkmdkmdkd"
