--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_DB_URL="mongodb://localhost:27017"
+MONGO_DB_URL="mongodb+srv://Yugandhar:Yesh1456@cluster.0lweolz.mongodb.net/?retryWrites=true&w=majority"
 AWS_ACCESS_KEY_ID="bdjdjhdkdmndcc"
 AWS_SECRET_ACCESS_KEY="dnndndjndkmdkmdkd"
