--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -47,7 +47,7 @@ jobs:
        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" 
  Continuous-Deployment:
   needs: build-and-push-ecr-image
-  runs-on: self-hosted
+  runs-on: ip-172-31-5-24
   steps:
   - name: Checkout
     uses: actions/checkout@v3
